# Tatuoca

./: .gitignore  .gitmodules  2imagem.tif  3imagem.tiff  4imagem.tiff  README.md  algoritmo.py  convertdata.py  curve.ipynb  códigoJosé.py  execução.py  extract.ipynb  extract.py  extractdata.ipynb  extractdata.py  main.py  teste.py  utils.py  xFilter.py
2imagem/: 0.txt  1.txt  2.txt  tup.txt
3imagem/: tup.txt
3imagem/calculoDiff/: curve0base0.txt  curve0base1.txt  curve1base0.txt  curve1base1.txt  curve2base0.txt  curve2base1.txt
3imagem/img/: 10.txt  11.txt  12.txt  20.txt  21.txt
3imagem/list/: 00.txt  01.txt  10.txt  11.txt  20.txt  21.txt
3imagem/processImg/: base0.txt  base1.txt  curve0.txt  curve1.txt  curve2.txt
4imagem/: 0.txt  1.txt  2.txt  tup.txt
4imagem/calculoDiff/: curve0base0.txt  curve0base1.txt  curve1base0.txt  curve1base1.txt  curve2base0.txt  curve2base1.txt
4imagem/img/: 10.txt  11.txt  12.txt  20.txt
4imagem/list/: 00.txt  01.txt  10.txt  11.txt  20.txt  21.txt
4imagem/processImg/: base0.txt  base1.txt  curve0.txt  curve1.txt  curve2.txt
imagem/: 0.txt  1.txt  2.txt  tup.txt
lpmalgos/: CMakeLists.txt  __init__.py  lpmalgos.pyi
lpmalgos/cmake/: CMakeLists.txt  GitVersion.cmake  build_config.cmake
lpmalgos/src/implementation/: CMakeLists.txt  api_init.cpp  ellipsoid.cpp  ellipsoid.h  geodesics.cpp  geodesics.h  machine.h  neighborhood.cpp  neighborhood.h
outros py/: convert.py  extract.ipynb  extract.py
outrosarch/: códigoJosé.py  teste.py  utils.py
skeleton/: __init__.py  skeleton.ipynb  skeleton.pyi
sources/lpmalgos/: .gitignore  LICENSE.txt
sources/lpmalgos/cmake/: CMakeLists.txt  build_config.cmake  helpers.cmake  package_manager.cmake
sources/lpmalgos/src/: CMakeLists.txt
sources/lpmalgos/src/implementation/: CMakeLists.txt  api_init.cpp  ellipsoid.cpp  ellipsoid.h  geodesics.cpp  geodesics.h  machine.cpp  nanoflann.hpp  neighborhood.cpp  neighborhood.h
sources/skeleton/: skeleton.ipynb  skeleton.pyx
